// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyCodes Component should render 1`] = `
<Button
  onClick={[Function]}
  size="default"
>
  <Icon
    name="Copy"
    size={14}
  />
  Copy
</Button>
`;

exports[`CopyCodes Component should show tooltip when copied state is true 1`] = `
<Tooltip
  bottom={true}
  content="Copied to clipboard!"
  dark={true}
  forcePosition={false}
  horizontalOffset="0px"
  preferredDirection={
    Object {
      "bottom": true,
      "left": false,
      "right": true,
      "top": false,
    }
  }
  right={true}
>
  <Button
    onClick={[Function]}
    size="default"
  >
    <Icon
      name="Copy"
      size={14}
    />
    Copy
  </Button>
</Tooltip>
`;
